--- a/src/styles/components/layout.module.scss
+++ b/src/styles/components/layout.module.scss
@@ -2,4 +2,8 @@
     margin-top: 30px;
     margin-left: 80px;
     margin-right: 80px;
+    @media (max-width: 768px) {
+        margin-left: 10px;
+        margin-right: 10px;
+    }
 }
