--- a/src/styles/dashboard.module.scss
+++ b/src/styles/dashboard.module.scss
@@ -20,3 +20,12 @@
 .locker{
     cursor: pointer;
 }
+
+    .card-body-info{
+        @media (max-width: 768px) {
+        
+                margin: 0;
+                padding: 0;
+            }
+        
+    }
